change the type from URL to URI